# mvg-rad

./: LICENSE  README.md  mvg-rad.ipynb  pyproject.toml
raw-data/: Readme.md
